potal home alignment

--- a/src/app/portalhome/portal.scss
+++ b/src/app/portalhome/portal.scss
@@ -114,7 +114,8 @@ body {
         background-color: #f26722; // Button color
         color: white; // Text color
         border: none;
-        padding: 10px 20px;
+        padding: 8px 25px;
+        font-size: 12px;
         border-radius: 5px;
         cursor: pointer;
         margin-top: 10px;
