--- a/src/app/Afterschool1/Afterschool1.scss
+++ b/src/app/Afterschool1/Afterschool1.scss
@@ -122,6 +122,18 @@ h1 {
 
 /* Tablet View */
 @media (max-width: 1024px) {
+
+  .account-page {
+    font-family: Arial, sans-serif;
+    background-color: whitesmoke;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%; // increased height
+    padding: 10px;
+    box-sizing: border-box;
+    margin: 0;
+  }
   .courses-section {
     grid-template-columns: repeat(2, 1fr); /* 2 columns for tablet */
   }
