--- a/src/app/Afterschool2/Afterschool2.scss
+++ b/src/app/Afterschool2/Afterschool2.scss
@@ -143,6 +143,18 @@ h1 {
 
 /* Mobile View */
 @media (max-width: 768px) {
+
+  .account-page {
+    font-family: Arial, sans-serif;
+    background-color: whitesmoke;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%; // increased height
+    padding: 10px;
+    box-sizing: border-box;
+    margin: 0;
+  }
   .courses-section {
     grid-template-columns: 1fr; /* 1 column for mobile */
     grid-row-gap: 20px; /* Increase row gap */
