--- a/src/app/modules/level1/introduction/1.scss
+++ b/src/app/modules/level1/introduction/1.scss
@@ -172,7 +172,7 @@ margin-bottom: 20px; // Space below the category boxes
   }
   
   .chessboard-info {
-    margin-top: 80px;
+    margin-top: 30px;
 
     .p{
       font-family: 'Montserrat', sans-serif;
@@ -327,12 +327,28 @@ margin-bottom: 20px; // Space below the category boxes
     margin: 0;
     margin-right: 20px;
     margin-top: 20px;
-    font-size: 25px; /* Adjust font size as needed */
+    margin-bottom: 20px;
+    font-size: 20px; /* Adjust font size as needed */
     text-align: center;
   }
 }
 
 @media (max-width: 768px) {
+  .media-container {
+    margin-top: 60px; // Adds space between the header and the video
+    text-align: center;
+    margin-bottom: 10px;
+  
+    .intro-image {
+      max-width: 100%;
+      height: auto;
+    }
+  
+    video {
+      max-width: 100%;
+      height: auto;
+    }
+  }
   .fixed-header {
     position: fixed;
     top: 0;
@@ -345,7 +361,7 @@ margin-bottom: 20px; // Space below the category boxes
       margin: 0;
       margin-right: 20px;
       margin-top: 0px;
-      font-size: 24px; /* Adjust font size as needed */
+      font-size: 20px; /* Adjust font size as needed */
       text-align: center;
     }
   }
