--- a/src/app/portalhome/portal.scss
+++ b/src/app/portalhome/portal.scss
@@ -146,13 +146,14 @@ body {
       color: black;
   
       .step {
+        gap: 0px;
         color: black;
         display: flex;
         flex-direction: column;
         align-items: center;
         position: relative;
         z-index: 1;
-        // padding: 10px;
+        //padding: 10px;
         overflow: hidden;
   
         .icon {
@@ -176,6 +177,7 @@ body {
     
         &.active {
           .icon {
+            border-radius: 5px;
             background-color: #f26722;
             cursor: pointer;
           }
@@ -237,8 +239,8 @@ body {
       }
 
       .icon {
-        width: 300px; // Adjusted size for mobile
-        height: 80px; // Adjusted size for mobile
+        width: 270px; // Adjusted size for mobile
+        height: 70px; // Adjusted size for mobile
         border-radius: 0;
         background-color: transparent;
         border: none;
