--- a/src/app/Afterschool1/Afterschool1.scss
+++ b/src/app/Afterschool1/Afterschool1.scss
@@ -56,7 +56,7 @@ h1 {
   cursor: pointer; // Add pointer cursor when clickable
 
   &.disabled {
-    pointer-events: none; // Disables click
+    // pointer-events: none; // Disables click
     // opacity: 0.1; // Makes the container look disabled
     cursor: not-allowed; // Shows a "not-allowed" cursor
   }
