--- a/src/app/portalhome/portal.scss
+++ b/src/app/portalhome/portal.scss
@@ -7,8 +7,9 @@ body {
 
 .hero {
   background-color: #2b87e2;
+  overflow-y: auto;
   max-width: 100vw; // Ensure the hero section doesn't exceed the viewport width
-  overflow: hidden; // Prevent overflow
+  // overflow: hidden; // Prevent overflow
 
   .headers {
     text-align: center;
