--- a/src/app/modules/level1/introductionToPieces/1.scss
+++ b/src/app/modules/level1/introductionToPieces/1.scss
@@ -1,153 +1,25 @@
-/* Ensure you're importing Montserrat font from Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
-
-/* Apply the font-family to all p tags */
-.lesson-content p {
-  font-family: 'Montserrat', sans-serif !important;
-}
 
 body {
   height: 100%;
+
+  // max-height: calc(100vh - 20px); 
+  overflow: hidden;
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif !important;
+  font-family: 'Montserrat', sans-serif;
   background-color: #f7f7f7; /* Light grey for a modern background */
 }
-.theme-practice {
-  background-color: #861cdd;
-  border: 1px solid #000;
-  padding: 10px;
-  border-radius: 5px;
-  margin-bottom: 20px;
 
-  .filter-container {
-    margin-bottom: 10px;
-
-    p {
-      font-size: 1.5rem; 
-      margin-bottom: 30px;
-      margin-top: 10px;
-      color: white;
-    }
-  }
-
-  .category-boxes {
-    display: flex;
-justify-content: space-around; // Distribute space evenly
-margin-bottom: 20px; // Space below the category boxes
-
-  }
-
-  .category-box {
-    background-color: #48b906; // Default background color
-    border: 1px solid #e3dbdb; // Border color
-    padding: 10px 20px; // Padding inside the box
-    color: white; // Text color
-    width: 200px;
-    text-align: center;
-    cursor: pointer; // Pointer cursor on hover
-    transition: background-color 0.3s ease, transform 0.3s ease; // Smooth transition for background color and transform
-  
-    &:hover {
-      background-color: #3a9706; // Darker green on hover
-      transform: scale(1.05); // Slight zoom effect on hover
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); // Shadow effect
-    }
-  
-    &.Opening {
-      background-color: #d59114; // Custom color for Opening
-      &:hover {
-        background-color: #b57612; // Darker shade on hover
-      }
-      &.active {
-        background-color: #ff9e01; // Highlight color for active tab
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); // Enhanced shadow effect
-        transform: scale(1.1); // Slightly larger scale for active tab
-      }
-    }
-  
-    &.Middlegame {
-      background-color: #00a6ff; // Custom color for Middlegame
-      &:hover {
-        background-color: #008dcc; // Darker shade on hover
-      }
-      &.active {
-        background-color: #1912f3; // Highlight color for active tab
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); // Enhanced shadow effect
-        transform: scale(1.1); // Slightly larger scale for active tab
-      }
-    }
-  
-    &.Endgame {
-      background-color: #73bf9a; // Custom color for Endgame
-      &:hover {
-        background-color: #7ac19c; // Darker shade on hover
-      }
-      &.active {
-        background-color: #0cc155; // Highlight color for active tab
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); // Enhanced shadow effect
-        transform: scale(1.1); // Slightly larger scale for active tab
-      }
-    }
-  
-    &.Mixed {
-      background-color: #cc5f00; // Custom color for Mixed
-      &:hover {
-        background-color: #a64c00; // Darker shade on hover
-      }
-      &.active {
-        background-color: rgb(218, 66, 12); // Highlight color for active tab
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); // Enhanced shadow effect
-        transform: scale(1.1); // Slightly larger scale for active tab
-      }
-    }
-  
-   
-  }
-
-  .practice-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #5ecd32;
-    border: 1px solid #000;
-    padding: 10px;
-    border-radius: 5px;
-    margin-bottom: 10px;
-
-    p {
-      font-family: 'Montserrat', sans-serif;
-      margin: 0;
-      color: white;
-    }
-
-    .clickable-link {
-      cursor: pointer;
-      color: blue; /* Add styles to indicate it's clickable */
-      text-decoration: underline;
-    }
-
-    .start-button, .return-button, .completed-button {
-      padding: 5px 10px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      background-color: #FFA500;
-      border: 1px solid #000;
-      color: white;
-    }
-
-    .join-button {
-      padding: 5px 10px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      background-color: #ff5500;
-      border: 1px solid #000;
-      color: white;
-    }
-  }
-}
+ 
+.lesson-content { 
+  max-height: 100vh; /* Adjust as needed */
+  overflow-y: auto; /* Enable vertical scroll if content exceeds max height */
+  padding: 10px 20px;
+  box-sizing: border-box;
+  background-color: #ffffff;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 
   h1 {
     font-size: 32px;
@@ -157,18 +29,26 @@ margin-bottom: 20px; // Space below the category boxes
   }
   
   h3 {
+    font-family: 'Montserrat', sans-serif;
     font-size: 20px;
+    font-weight: bold;
     color: #000000; /* Bright yet professional red */
     margin-bottom: 20px;
     text-align: center;
   }
   
   .chessboard-info {
-    margin-bottom: 20px;
+    margin-top: 30px;
+
+    .p{
+      font-family: 'Montserrat', sans-serif;
+    }
 
     .video-container {
-      margin-top: 60px;
+      margin-bottom: 20px;
       text-align: center;
+
+
 
       video {
         max-width: 100%;
@@ -184,8 +64,9 @@ margin-bottom: 20px; // Space below the category boxes
     }
 
     p {
+      font-family: 'Montserrat', sans-serif;
       font-size: 16px;
-      color: #7f8c8d; /* Soft grey for text */
+      color: #232424; /* Soft grey for text */
       margin-bottom: 10px;
     }
 
@@ -207,7 +88,6 @@ margin-bottom: 20px; // Space below the category boxes
         }
 
         p {
-          font-family: 'Montserrat', sans-serif;
           font-size: 14px;
           color: #2c3e50; /* Deep, readable color */
         }
@@ -216,6 +96,7 @@ margin-bottom: 20px; // Space below the category boxes
 
     .chessboard-info,
     .pieces-info {
+      max-height: calc(100vh - 20px); 
       background-color: #fdfefe; /* Very light blue tint for a modern look */
     }
   }
@@ -244,20 +125,20 @@ margin-bottom: 20px; // Space below the category boxes
   .navigation-buttons {
     display: flex;
     justify-content: space-between;
-    margin-top: 40px;
+    // margin-top: 2px;
 
     button {
       padding: 10px 20px;
       border: none;
       border-radius: 5px;
-      background-color: #e74c3c; /* Bold red for buttons */
+      background-color: #0e95ee; /* Bold red for buttons */
       color: #ffffff;
       font-size: 16px;
       cursor: pointer;
       transition: background-color 0.3s;
 
       &:hover {
-        background-color: #c0392b; /* Darker shade for hover */
+        background-color: #3498db; /* Darker shade for hover */
       }
     }
   }
@@ -307,18 +188,50 @@ margin-bottom: 20px; // Space below the category boxes
       }
     }
   }
+}
+.fixed-header {
+  h3 {
+    margin: 0;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 20px; /* Adjust font size as needed */
+    text-align: center;
+  }
+}
 
-  .fixed-header {
-    // Your existing styles...
-  
-    /* Add margin-bottom to create a gap between the header and the video */
-    margin-bottom: 20px; // Adjust the value for the gap size as needed
-  }
-  
+@media (max-width: 768px) {
   .media-container {
-    // Your existing styles...
+    margin-top: 60px; // Adds space between the header and the video
+    text-align: center;
+    margin-bottom: 10px;
   
-    /* Add padding-top or margin-top to create a gap between the video and the previous element (if needed) */
-    padding-top: 20px; // Adjust this value as needed
+    .intro-image {
+      max-width: 100%;
+      height: auto;
+    }
+  
+    video {
+      max-width: 100%;
+      height: auto;
+    }
+  }
+  .fixed-header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: #fff; /* Adjust as needed */
+    z-index: 1; /* Ensure it stays on top */
+    padding: 10px 20px;
+  
+    h3 {
+      margin: 0;
+      margin-right: 20px;
+      margin-top: 0px;
+      font-size: 20px; /* Adjust font size as needed */
+      text-align: center;
+    }
   }
   
+
+}
