--- a/src/app/modules/level1/introduction/1.scss
+++ b/src/app/modules/level1/introduction/1.scss
@@ -13,8 +13,8 @@ body {
 
  
 .lesson-content { 
-  max-height: 100vh; /* Adjust as needed */
-  overflow-y: auto; /* Enable vertical scroll if content exceeds max height */
+  height: 100vh;
+    overflow-y: auto; /* Enable vertical scroll if content exceeds max height */
   padding: 10px 20px;
   box-sizing: border-box;
   background-color: #ffffff;
