--- a/src/app/portalhome/portal.scss
+++ b/src/app/portalhome/portal.scss
@@ -89,6 +89,7 @@ body {
             }
     
             h4 {
+              font-family: 'Montserrat', sans-serif;
               margin: 0;
               font-size: 20px;
               font-weight: bold;
