--- a/src/app/portalhome1/portal1.scss
+++ b/src/app/portalhome1/portal1.scss
@@ -20,7 +20,7 @@ body {
       // padding: 10px; /* Space inside the border */
       margin: 10px 0; /* Space outside the border */
       background-color: #1d3557; 
-      font-family: 'Comic Sans MS', cursive, sans-serif; /* Fun, kid-friendly font */
+      font-family: 'Montserrat', sans-serif; /* Fun, kid-friendly font */
       color: #f9fbfb;
     }
 
@@ -65,6 +65,7 @@ body {
           }
 
           h4 {
+            font-family: 'Montserrat', sans-serif;
             margin: 0;
             font-size: 15px;
             font-weight: bold;
