--- a/src/app/Afterschool1/Afterschool1.scss
+++ b/src/app/Afterschool1/Afterschool1.scss
@@ -1,3 +1,8 @@
+body {
+  height: 100vh;
+  // overflow: hidden;
+}
+
 .account-page {
   font-family: Arial, sans-serif;
   background-color: whitesmoke;
