--- a/src/app/portalhome/portal.scss
+++ b/src/app/portalhome/portal.scss
@@ -2,21 +2,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Corben:wght@400;700&family=Lilita+One&family=Matemasie&display=swap');
 
 body {
-  overflow: hidden; // Prevent horizontal scrolling
-  @media (max-width: 768px) {
-    overflow-y: auto; // Allow vertical scrolling on mobile
-  }
+  overflow-x: hidden; // Prevent horizontal scrolling
 }
 
 .hero {
   background-color: #2b87e2;
-  overflow-y: auto;
+  padding: 20px;
   max-width: 100vw; // Ensure the hero section doesn't exceed the viewport width
-  // overflow: hidden; // Prevent overflow
+  overflow: hidden; // Prevent overflow
 
   .headers {
     text-align: center;
-    // margin-bottom: 20px;
+    margin-bottom: 20px;
 
     h2 {
       text-align: center;
@@ -45,94 +42,95 @@ body {
       color: #f9fbfb;
     }
 
-    .journey {
-      display: flex;
-      justify-content: center;
+  .journey {
+    display: flex;
+    justify-content: center;
       margin-bottom: 10px;
       
       // padding: 10px; // Optional: Add padding around the journey
-    
-      .level {
+
+    .level {
         max-height: 400px; // Set a maximum height for the container
       overflow-y: auto; // Enable vertical scrolling
-        width: 100%; // Full width for mobile
-        padding: 20px;
-        background-color: #1d3557; // Darker background for contrast
-        border-radius: 10px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-    
-        h3 {
-          color: #ffffff;
-          font-size: 28px;
-          text-align: center;
-          font-weight: bold;
-          margin-bottom: 20px;
-        }
-    
-        .steps {
-          display: grid;
-          grid-template-columns: repeat(1, 1fr);
-          gap: 20px;
-    
-          .step {
-            display: flex;
+      width: 100%; // Full width for mobile
+      padding: 20px;
+      background-color: #1d3557; // Darker background for contrast
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+
+      h3 {
+        color: #ffffff;
+        font-size: 28px;
+        text-align: center;
+        font-weight: bold;
+        margin-bottom: 20px;
+      }
+
+      .steps {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+
+        .step {
+          display: flex;
             align-items: center; // Align items to the start
-            background-color: #a8dadc;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+          background-color: #a8dadc;
+          box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             padding: 5px; // Add padding for better spacing
-            border-radius: 5px;
-    
-            .icon {
-              flex-shrink: 0;
-              width: 100px;
+          border-radius: 5px;
+
+          .icon {
+            flex-shrink: 0;
+            width: 100px;
               height: 170px;
-            }
-    
-            h4 {
+          }
+
+          h4 {
               font-family: 'Montserrat', sans-serif;
-              margin: 0;
-              font-size: 20px;
-              font-weight: bold;
-              color: #1d3557;
-            }
-    
-            .level-description {
-              font-size: 16px;
-              color: #457b9d;
-              overflow: hidden; // Prevent overflow
-    
-              @media (max-width: 768px) {
+            margin: 0;
+            font-size: 20px;
+            font-weight: bold;
+            color: #1d3557;
+          }
+
+          .level-description {
+            font-size: 16px;
+            color: #457b9d;
+            overflow: hidden; // Prevent overflow
+          
+          
+            @media (max-width: 768px) {
                 // overflow: hidden;
-                display: -webkit-box;
-                -webkit-box-orient: vertical;
-                -webkit-line-clamp: 3;
-    
-                &.expanded {
-                  display: block;
-                  -webkit-line-clamp: unset; // Remove clamping for mobile view when expanded
-                }
+              display: -webkit-box;
+              -webkit-box-orient: vertical;
+              -webkit-line-clamp: 3;
+          
+              &.expanded {
+                display: block;
+                -webkit-line-clamp: unset; // Remove clamping for mobile view when expanded
               }
             }
           }
-    
-          button {
-            background-color: #f26722; // Button color
-            color: white; // Text color
-            border: none;
+          
+        }
+      }
+
+      button {
+        background-color: #f26722; // Button color
+        color: white; // Text color
+        border: none;
             padding: 8px 25px;
             font-size: 12px;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-top: 10px;
-    
-            &:hover {
-              background-color: #d45d1a; // Darker shade on hover
-            }
-          }
+        border-radius: 5px;
+        cursor: pointer;
+        margin-top: 10px;
+
+        &:hover {
+          background-color: #d45d1a; // Darker shade on hover
         }
       }
     }
-    
+  }
   .chess-journey {
     display: flex;
     justify-content: center;
@@ -231,11 +229,11 @@ body {
 
         button {
           position: absolute;
-          top: 41px; /* Adjust as needed to place above image */
+          top: 20px; /* Adjust as needed to place above image */
           left: 80%;
           transform: translateX(-50%);
           width: auto; 
-          padding: 2px 15px;
+          padding: 5px 15px;
           font-size: 10px;
           border-radius: 5px;
           background-color: #0a7c5e;
@@ -257,25 +255,25 @@ body {
 }
   
 
-.chess-journey {
+  .chess-journey {
   flex-direction: column; // Vertical layout for mobile
-
-  .level {
-    flex-direction: column; // Stack levels vertically
-    align-items: center; // Center the items
+    
+    .level {
+      flex-direction: column; // Stack levels vertically
+      align-items: center; // Center the items
     gap: 0; // Ensure no gap between levels
 
-    .step {
+      .step {
       flex-direction: column; // Stack icon and text vertically
-      align-items: center; // Center align vertically
+        align-items: center; // Center align vertically
       margin: 0; // Remove any margin for the step
       padding: 0; // Remove padding for the step
 
-      p {
+          p {
         display: none; // Hide the text in mobile view
-      }
+          }
 
-      .icon {
+        .icon {
         width: 270px; // Adjusted size for mobile
         height: 70px; // Adjusted size for mobile
         border-radius: 0px;
@@ -293,42 +291,42 @@ body {
           width: 100%; // Ensure the image takes full width of the container
           height: 90%; // Ensure the image takes full height of the container
           padding: 3px;
-          &.pawn {
-            content: url("/images/portal/1.png"); // Mobile version for pawn
-          }
-          &.knight {
-            content: url("/images/portal/2.png"); // Mobile version for knight
-          }
-          &.bishop {
-            content: url("/images/portal/3.png"); // Mobile version for bishop
-          }
-          &.rook {
-            content: url("/images/portal/4.png"); // Mobile version for rook
-          }
-          &.queen {
-            content: url("/images/portal/5.png"); // Mobile version for queen
-          }
-          &.king {
-            content: url("/images/portal/6.png"); // Mobile version for king
+            &.pawn {
+              content: url("/images/portal/1.png"); // Mobile version for pawn
+            }
+            &.knight {
+              content: url("/images/portal/2.png"); // Mobile version for knight
+            }
+            &.bishop {
+              content: url("/images/portal/3.png"); // Mobile version for bishop
+            }
+            &.rook {
+              content: url("/images/portal/4.png"); // Mobile version for rook
+            }
+            &.queen {
+              content: url("/images/portal/5.png"); // Mobile version for queen
+            }
+            &.king {
+              content: url("/images/portal/6.png"); // Mobile version for king
+            }
           }
         }
-      }
 
-      p {
-        font-size: 12px; // Slightly larger font for better readability
+        p {
+          font-size: 12px; // Slightly larger font for better readability
         margin: 0; // Ensure no additional margin
         padding: 0; // Ensure no padding
-      }
+        }
 
-      &.active {
-        .icon {
-          padding: 3px;
+        &.active {
+          .icon {
+            padding: 3px;
           border-radius: 0px;
-          background-color: #f26722;
-          cursor: pointer;
+            background-color: #f26722;
+            cursor: pointer;
+          }
         }
       }
-    }
   }
 }
   }
