logo changed for small devices

--- a/src/app/modules/level1/introduction/1.scss
+++ b/src/app/modules/level1/introduction/1.scss
@@ -38,6 +38,7 @@ body {
   
   .chessboard-info {
     margin-top: 30px;
+    margin-bottom: 40px;
 
     .p{
       font-family: 'Montserrat', sans-serif;
