--- a/src/app/side.scss
+++ b/src/app/side.scss
@@ -83,95 +83,105 @@
       margin-bottom: 10px;
       transition: background-color 0.3s, color 0.3s;
       font-family: 'Montserrat', sans-serif;
-      font-size: 1.2rem;
+      font-size: 1.2rem; /* Default font size */
       font-weight: bold;
+    
       &:hover {
         background-color: #e9ecef;
         color: #007bff;
-
+    
         svg {
           color: #007bff;
         }
       }
-
+    
       svg {
         margin-right: 10px;
         font-size: 1.7rem;
         transition: color 0.3s;
       }
-
+    
       &.home {
         background-color: #ff6347; /* Tomato */
         color: white;
-
+    
         &:hover {
           background-color: #ff6347;
         }
       }
-
+    
       &.tests {
         background-color: #ff6347; /* SteelBlue */
         color: white;
-
+    
         &:hover {
           background-color: #ff6347;
         }
       }
-
+    
       &.test {
         background-color: #403ec0; /* SteelBlue */
         color: white;
-
+    
         &:hover {
           background-color: #605de1;
         }
       }
-
+    
       &.classes {
         background-color: #32cd32; /* LimeGreen */
         color: white;
-
+    
         &:hover {
           background-color: #32cd32;
         }
       }
-
+    
       &.teachers {
         background-color: #ff8c00; /* DarkOrange */
         color: white;
-
+    
         &:hover {
           background-color: #ff8c00;
         }
       }
-
+    
       &.events {
         background-color: #8a2be2; /* BlueViolet */
         color: white;
-
+    
         &:hover {
           background-color: #8a2be2;
         }
       }
-
+    
       &.school {
         background-color: #888211; /* BlueViolet */
         color: rgb(243, 244, 243);
-
+    
         &:hover {
           background-color: #8f9a12;
         }
-    }
-    &.logout {
-      background-color: #ee2e08; /* BlueViolet */
-      color: white;
-
-      &:hover {
-        background-color: #d3340c;
+      }
+    
+      &.logout {
+        background-color: #ee2e08; /* BlueViolet */
+        color: white;
+    
+        &:hover {
+          background-color: #d3340c;
+        }
+      }
+    
+      /* Mobile-specific styles */
+      @media (max-width: 768px) {
+        font-size: 1rem; /* Smaller font size for mobile */
+        svg {
+          font-size: 1.5rem; /* Smaller icon size for mobile */
+        }
       }
     }
-
-  }
+    
   }
 }
 
